--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# importing libraries\n",
     "from __future__ import division\n",
@@ -34,62 +25,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading the data"
+    "Auxiliary functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def intercala_listas(a, b):\n",
     "    c = list(zip(a, b))\n",
-    "    return [elt for sublist in c for elt in sublist]"
+    "    return [elt for sublist in c for elt in sublist]\n",
+    "\n",
+    "def format_names(names):\n",
+    "    names_latex = []\n",
+    "    hi_there = 0\n",
+    "    for n in names:\n",
+    "        if n=='lsig_c':\n",
+    "            hi_there+=1\n",
+    "            if hi_there==2:\n",
+    "                n += '2'\n",
+    "        if n[-1]=='2':\n",
+    "            n = n.replace('2','^x')\n",
+    "        if n[0]=='s':\n",
+    "            n = n.replace('sig',r'$\\sigma')\n",
+    "            n += '$'\n",
+    "        elif n[:2]=='ls':\n",
+    "            n = n.replace('lsig',r'$log(\\sigma')\n",
+    "            n += ')$'\n",
+    "        elif n[:2]=='ps':\n",
+    "            n = n.replace('psig',r'$\\sigma')\n",
+    "            n += '$%'\n",
+    "        elif n[:2]=='pl':\n",
+    "            n = n.replace('plsig',r'$log(\\sigma')\n",
+    "            n += ')$%'\n",
+    "        elif n==\"mu_y\":\n",
+    "            n = n.replace('mu',r'$\\mu')\n",
+    "            n += '$'\n",
+    "        else:\n",
+    "            n = n.replace('lpsig',r'$log(\\sigma')\n",
+    "            n += '^x)$%'\n",
+    "    #     print n\n",
+    "        names_latex.append(n)\n",
+    "    return names_latex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading the data\n",
+    "### New version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_latex = []\n",
-    "hi_there = 0\n",
-    "for n in names:\n",
-    "    if n=='lsig_c':\n",
-    "        hi_there+=1\n",
-    "        if hi_there==2:\n",
-    "            n += '2'\n",
-    "    if n[-1]=='2':\n",
-    "        n = n.replace('2','^x')\n",
-    "    if n[0]=='s':\n",
-    "        n = n.replace('sig',r'$\\sigma')\n",
-    "        n += '$'\n",
-    "    elif n[:2]=='ls':\n",
-    "        n = n.replace('lsig',r'$log(\\sigma')\n",
-    "        n += ')$'\n",
-    "    elif n[:2]=='ps':\n",
-    "        n = n.replace('psig',r'$\\sigma')\n",
-    "        n += '$%'\n",
-    "    elif n[:2]=='pl':\n",
-    "        n = n.replace('plsig',r'$log(\\sigma')\n",
-    "        n += ')$%'\n",
-    "    else:\n",
-    "        n = n.replace('lpsig',r'$log(\\sigma')\n",
-    "        n += '^x)$%'\n",
-    "#     print n\n",
-    "    names_latex.append(n)"
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "names_latex = format_names(names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AllTab.round(3).to_csv('results/all_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Old version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "table_raw = np.zeros(22).astype(int)\n",
@@ -98,11 +143,13 @@
     "f = open('results/table_lowest.log','r')\n",
     "for line in f:\n",
     "    words = line.split()    \n",
-    "#     print words\n",
+    "#     print(words)\n",
     "    if len(words)==7:\n",
     "        names.append(words[0])\n",
     "        sigmas.append(float(words[3]))\n",
     "f.close()\n",
+    "\n",
+    "names_latex = format_names(names)\n",
     "\n",
     "AllTab = pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])"
    ]
@@ -1078,21 +1125,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
