--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -117,11 +117,316 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
+      "Not all pandas column names were valid Stata variable names.\n",
+      "The following replacements have been made:\n",
+      "\n",
+      "    STU+SpellAdj   ->   STU_SpellAdj\n",
+      "    NE+SpellAdj   ->   NE_SpellAdj\n",
+      "    STU+Recalls+SpellAdj   ->   STU_Recalls_SpellAdj\n",
+      "\n",
+      "If this is not what you expect, please make sure you have Stata-compliant\n",
+      "column names in your DataFrame (strings only, max 32 characters, only\n",
+      "alphanumerics and underscores, no Stata reserved words)\n",
+      "\n",
+      "  warnings.warn(ws, InvalidColumnName)\n"
+     ]
+    }
+   ],
    "source": [
-    "AllTab.round(3).to_csv('results/all_results.csv')"
+    "# AllTab.round(3).to_csv('results/all_results.csv')\n",
+    "AllTab.round(3).to_stata('results/all_results.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
+      "Not all pandas column names were valid Stata variable names.\n",
+      "The following replacements have been made:\n",
+      "\n",
+      "    RAW2002-2007   ->   RAW2002_2007\n",
+      "    LTU2002-2007   ->   LTU2002_2007\n",
+      "    STU2002-2007   ->   STU2002_2007\n",
+      "    STU+Spellcorrection2002-2007   ->   STU_Spellcorrection2002_2007\n",
+      "    STU+Recalls+SpellAdj2002-2007   ->   STU_Recalls_SpellAdj2002_2007\n",
+      "    NE+Spellcorrection2002-2007   ->   NE_Spellcorrection2002_2007\n",
+      "    RAW2008-2013   ->   RAW2008_2013\n",
+      "    LTU2008-2013   ->   LTU2008_2013\n",
+      "    STU2008-2013   ->   STU2008_2013\n",
+      "    STU+Spellcorrection2008-2013   ->   STU_Spellcorrection2008_2013\n",
+      "    STU+Recalls+SpellAdj2008-2013   ->   STU_Recalls_SpellAdj2008_2013\n",
+      "    NE+Spellcorrection2008-2013   ->   NE_Spellcorrection2008_2013\n",
+      "\n",
+      "If this is not what you expect, please make sure you have Stata-compliant\n",
+      "column names in your DataFrame (strings only, max 32 characters, only\n",
+      "alphanumerics and underscores, no Stata reserved words)\n",
+      "\n",
+      "  warnings.warn(ws, InvalidColumnName)\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/BC_all.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "names_latex = format_names(names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "AllTab.round(3).to_stata('results/BC_results.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
+      "Not all pandas column names were valid Stata variable names.\n",
+      "The following replacements have been made:\n",
+      "\n",
+      "    Raw,men   ->   Raw_men\n",
+      "    Raw,women   ->   Raw_women\n",
+      "    LTU,men   ->   LTU_men\n",
+      "    LTU,women   ->   LTU_women\n",
+      "    STU,men   ->   STU_men\n",
+      "    STU,women   ->   STU_women\n",
+      "    STU+SpellAdj,men   ->   STU_SpellAdj_men\n",
+      "    STU+SpellAdj,women   ->   STU_SpellAdj_women\n",
+      "    STU+Recalls+SpellAdj,men   ->   STU_Recalls_SpellAdj_men\n",
+      "    STU+Recalls+SpellAdj,women   ->   STU_Recalls_SpellAdj_women\n",
+      "    NE+SpellAdj,men   ->   NE_SpellAdj_men\n",
+      "    NE+SpellAdj,women   ->   NE_SpellAdj_women\n",
+      "\n",
+      "If this is not what you expect, please make sure you have Stata-compliant\n",
+      "column names in your DataFrame (strings only, max 32 characters, only\n",
+      "alphanumerics and underscores, no Stata reserved words)\n",
+      "\n",
+      "  warnings.warn(ws, InvalidColumnName)\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_sex.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "names_latex = format_names(names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "AllTab.round(3).to_stata('results/results_sex.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
+      "Not all pandas column names were valid Stata variable names.\n",
+      "The following replacements have been made:\n",
+      "\n",
+      "    Raw,college   ->   Raw_college\n",
+      "    Raw,nocollege   ->   Raw_nocollege\n",
+      "    LTU,college   ->   LTU_college\n",
+      "    LTU,nocollege   ->   LTU_nocollege\n",
+      "    STU,college   ->   STU_college\n",
+      "    STU,nocollege   ->   STU_nocollege\n",
+      "    STU+SpellAdj,college   ->   STU_SpellAdj_college\n",
+      "    STU+SpellAdj,nocollege   ->   STU_SpellAdj_nocollege\n",
+      "    STU+Recalls+SpellAdj,college   ->   STU_Recalls_SpellAdj_college\n",
+      "    STU+Recalls+SpellAdj,nocollege   ->   STU_Recalls_SpellAdj_nocollege\n",
+      "    NE+SpellAdj,college   ->   NE_SpellAdj_college\n",
+      "    NE+SpellAdj,nocollege   ->   NE_SpellAdj_nocollege\n",
+      "\n",
+      "If this is not what you expect, please make sure you have Stata-compliant\n",
+      "column names in your DataFrame (strings only, max 32 characters, only\n",
+      "alphanumerics and underscores, no Stata reserved words)\n",
+      "\n",
+      "  warnings.warn(ws, InvalidColumnName)\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/all_results_educ.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "names_latex = format_names(names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "AllTab.round(3).to_stata('results/results_educ.dta')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
+      "Not all pandas column names were valid Stata variable names.\n",
+      "The following replacements have been made:\n",
+      "\n",
+      "    RAW2002-2007College   ->   RAW2002_2007College\n",
+      "    RAW2002-2007NoCollege   ->   RAW2002_2007NoCollege\n",
+      "    LTU2002-2007,college   ->   LTU2002_2007_college\n",
+      "    LTU2002-2007,nocollege   ->   LTU2002_2007_nocollege\n",
+      "    STU2002-2007,college   ->   STU2002_2007_college\n",
+      "    STU2002-2007,nocollege   ->   STU2002_2007_nocollege\n",
+      "    STU+Spellcorrection2002-2007,college   ->   STU_Spellcorrection2002_2007_col\n",
+      "    STU+Spellcorrection2002-2007,nocollege   ->   STU_Spellcorrection2002_2007_noc\n",
+      "    STU+Recalls+SpellAdj2002-2007,college   ->   STU_Recalls_SpellAdj2002_2007_co\n",
+      "    STU+Recalls+SpellAdj2002-2007,nocollege   ->   STU_Recalls_SpellAdj2002_2007_no\n",
+      "    NE+Spellcorrection2002-2007,college   ->   NE_Spellcorrection2002_2007_coll\n",
+      "    NE+Spellcorrection2002-2007,nocollege   ->   NE_Spellcorrection2002_2007_noco\n",
+      "    RAW2008-2013College   ->   RAW2008_2013College\n",
+      "    RAW2008-2013NoCollege   ->   RAW2008_2013NoCollege\n",
+      "    LTU2008-2013,college   ->   LTU2008_2013_college\n",
+      "    LTU2008-2013,nocollege   ->   LTU2008_2013_nocollege\n",
+      "    STU2008-2013,college   ->   STU2008_2013_college\n",
+      "    STU2008-2013,nocollege   ->   STU2008_2013_nocollege\n",
+      "    STU+Spellcorrection2008-2013,college   ->   STU_Spellcorrection2008_2013_col\n",
+      "    STU+Spellcorrection2008-2013,nocollege   ->   STU_Spellcorrection2008_2013_noc\n",
+      "    STU+Recalls+SpellAdj2008-2013,college   ->   STU_Recalls_SpellAdj2008_2013_co\n",
+      "    STU+Recalls+SpellAdj2008-2013,nocollege   ->   STU_Recalls_SpellAdj2008_2013_no\n",
+      "    NE+Spellcorrection2008-2013,college   ->   NE_Spellcorrection2008_2013_coll\n",
+      "    NE+Spellcorrection2008-2013,nocollege   ->   NE_Spellcorrection2008_2013_noco\n",
+      "\n",
+      "If this is not what you expect, please make sure you have Stata-compliant\n",
+      "column names in your DataFrame (strings only, max 32 characters, only\n",
+      "alphanumerics and underscores, no Stata reserved words)\n",
+      "\n",
+      "  warnings.warn(ws, InvalidColumnName)\n"
+     ]
+    }
+   ],
+   "source": [
+    "table_raw = np.empty(23)\n",
+    "names = []\n",
+    "sigmas = []\n",
+    "column_names = []\n",
+    "results_follow = 0\n",
+    "first_row = 1\n",
+    "f = open('results/BC_educ.log','r')\n",
+    "for line in f:\n",
+    "    words = line.split()\n",
+    "    if len(words)>1 and words[1]==\"******\":\n",
+    "        column_names.append(\"\".join(words[2:-1]))\n",
+    "        results_follow=1\n",
+    "    elif results_follow==1 and len(words)==7:\n",
+    "        if first_row==1:\n",
+    "            names.append(words[0])\n",
+    "        sigmas.append(float(words[3]))\n",
+    "        if words[0]=='lpsig_b':\n",
+    "            results_follow=0\n",
+    "            table_raw = np.vstack((table_raw,np.array(sigmas)))\n",
+    "            sigmas = []\n",
+    "            first_row = 0\n",
+    "#             print(column_names[-1])\n",
+    "#             names_latex = format_names(names)\n",
+    "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
+    "f.close()\n",
+    "\n",
+    "names_latex = format_names(names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "AllTab.round(3).to_stata('results/results_BC_educ.dta')"
    ]
   },
   {
