Variable names format fixed

--- a/tables_and_plots.ipynb
+++ b/tables_and_plots.ipynb
@@ -15,7 +15,7 @@
     "sns.set_style(\"white\")\n",
     "from scipy import stats\n",
     "import pandas as pd\n",
-    "\n",
+    "import itertools\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,47 @@
     "            n += '^x)$%'\n",
     "    #     print n\n",
     "        names_latex.append(n)\n",
-    "    return names_latex"
+    "    return names_latex\n",
+    "\n",
+    "def format_short(AllTab):\n",
+    "    tab_short = AllTab.iloc[-8:].copy()\n",
+    "    tab_short.rename(index={'lsig_y2': 'log_variance', \n",
+    "                                   'sig_x': 'spell_number',\n",
+    "                                  'lsig_c': 'constant',\n",
+    "                                   'lsig_e2': 'duration_dependence',\n",
+    "                                   'lsig_b2': 'heterogeneity',\n",
+    "                                   'lpsig_x': 'spell_number_percentage',\n",
+    "                                  'lpsig_x': 'spell_number_percentage',\n",
+    "                                  'lpsig_e': 'duration_dependence_percentage',\n",
+    "                                  'lpsig_b': 'heterogeneity_percentage'},inplace='True')\n",
+    "    tab_short = tab_short.append(pd.Series(1-AllTab.iloc[-3:].sum(),name='constant_percentage'))\n",
+    "    tab_short = tab_short.reindex(['log_variance', 'spell_number', 'constant', 'duration_dependence',\n",
+    "           'heterogeneity', 'constant_percentage','spell_number_percentage',\n",
+    "           'duration_dependence_percentage', 'heterogeneity_percentage'])\n",
+    "    return tab_short\n",
+    "\n",
+    "def format_very_short(AllTab):\n",
+    "    tab_short = AllTab.iloc[-3:].copy()\n",
+    "    tab_short = tab_short.T\n",
+    "    tab_short.reset_index(level=0,inplace=True)\n",
+    "    tab_short['shareC'] = 1-AllTab.iloc[-3:].sum().values\n",
+    "    tab_short['var'] = AllTab.iloc[-8].values\n",
+    "    tab_short.rename(columns={'lpsig_x': 'shareS',\n",
+    "                            'lpsig_e': 'shareDD',\n",
+    "                            'lpsig_b': 'shareH',\n",
+    "                             'index':'cat'},inplace='True')\n",
+    "    tab_short = tab_short[['shareC','shareDD','shareH','shareS','cat','var']]\n",
+    "    return tab_short\n",
+    "\n",
+    "def format_column_names(column_names):\n",
+    "    var_name = []\n",
+    "    type1 = []\n",
+    "    for name in column_names:\n",
+    "        split = name.split(',')\n",
+    "        n,t = split[0],split[1:]\n",
+    "        var_name.append(n)\n",
+    "        type1.append(t)\n",
+    "    return var_name,type1"
    ]
   },
   {
@@ -81,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,75 +152,19 @@
     "f.close()\n",
     "\n",
     "names_latex = format_names(names)\n",
-    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
-      "Not all pandas column names were valid Stata variable names.\n",
-      "The following replacements have been made:\n",
-      "\n",
-      "    STU+SpellAdj   ->   STU_SpellAdj\n",
-      "    NE+SpellAdj   ->   NE_SpellAdj\n",
-      "    STU+Recalls+SpellAdj   ->   STU_Recalls_SpellAdj\n",
-      "\n",
-      "If this is not what you expect, please make sure you have Stata-compliant\n",
-      "column names in your DataFrame (strings only, max 32 characters, only\n",
-      "alphanumerics and underscores, no Stata reserved words)\n",
-      "\n",
-      "  warnings.warn(ws, InvalidColumnName)\n"
-     ]
-    }
-   ],
-   "source": [
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
     "# AllTab.round(3).to_csv('results/all_results.csv')\n",
-    "AllTab.round(3).to_stata('results/all_results.dta')"
+    "short_tab.round(3).to_stata('results/all_results.dta')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
-      "Not all pandas column names were valid Stata variable names.\n",
-      "The following replacements have been made:\n",
-      "\n",
-      "    RAW2002-2007   ->   RAW2002_2007\n",
-      "    LTU2002-2007   ->   LTU2002_2007\n",
-      "    STU2002-2007   ->   STU2002_2007\n",
-      "    STU+Spellcorrection2002-2007   ->   STU_Spellcorrection2002_2007\n",
-      "    STU+Recalls+SpellAdj2002-2007   ->   STU_Recalls_SpellAdj2002_2007\n",
-      "    NE+Spellcorrection2002-2007   ->   NE_Spellcorrection2002_2007\n",
-      "    RAW2008-2013   ->   RAW2008_2013\n",
-      "    LTU2008-2013   ->   LTU2008_2013\n",
-      "    STU2008-2013   ->   STU2008_2013\n",
-      "    STU+Spellcorrection2008-2013   ->   STU_Spellcorrection2008_2013\n",
-      "    STU+Recalls+SpellAdj2008-2013   ->   STU_Recalls_SpellAdj2008_2013\n",
-      "    NE+Spellcorrection2008-2013   ->   NE_Spellcorrection2008_2013\n",
-      "\n",
-      "If this is not what you expect, please make sure you have Stata-compliant\n",
-      "column names in your DataFrame (strings only, max 32 characters, only\n",
-      "alphanumerics and underscores, no Stata reserved words)\n",
-      "\n",
-      "  warnings.warn(ws, InvalidColumnName)\n"
-     ]
-    }
-   ],
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "table_raw = np.empty(23)\n",
     "names = []\n",
@@ -208,47 +192,20 @@
     "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
     "f.close()\n",
     "\n",
-    "names_latex = format_names(names)\n",
-    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
-    "AllTab.round(3).to_stata('results/BC_results.dta')"
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, year_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['period'] = list(itertools.chain.from_iterable(year_names))\n",
+    "short_tab.round(3).to_stata('results/BC_results.dta')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
-      "Not all pandas column names were valid Stata variable names.\n",
-      "The following replacements have been made:\n",
-      "\n",
-      "    Raw,men   ->   Raw_men\n",
-      "    Raw,women   ->   Raw_women\n",
-      "    LTU,men   ->   LTU_men\n",
-      "    LTU,women   ->   LTU_women\n",
-      "    STU,men   ->   STU_men\n",
-      "    STU,women   ->   STU_women\n",
-      "    STU+SpellAdj,men   ->   STU_SpellAdj_men\n",
-      "    STU+SpellAdj,women   ->   STU_SpellAdj_women\n",
-      "    STU+Recalls+SpellAdj,men   ->   STU_Recalls_SpellAdj_men\n",
-      "    STU+Recalls+SpellAdj,women   ->   STU_Recalls_SpellAdj_women\n",
-      "    NE+SpellAdj,men   ->   NE_SpellAdj_men\n",
-      "    NE+SpellAdj,women   ->   NE_SpellAdj_women\n",
-      "\n",
-      "If this is not what you expect, please make sure you have Stata-compliant\n",
-      "column names in your DataFrame (strings only, max 32 characters, only\n",
-      "alphanumerics and underscores, no Stata reserved words)\n",
-      "\n",
-      "  warnings.warn(ws, InvalidColumnName)\n"
-     ]
-    }
-   ],
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "table_raw = np.empty(23)\n",
     "names = []\n",
@@ -276,47 +233,20 @@
     "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
     "f.close()\n",
     "\n",
-    "names_latex = format_names(names)\n",
-    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
-    "AllTab.round(3).to_stata('results/results_sex.dta')"
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, sex_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['gender'] = list(itertools.chain.from_iterable(sex_names))\n",
+    "short_tab.round(3).to_stata('results/results_sex.dta')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
-      "Not all pandas column names were valid Stata variable names.\n",
-      "The following replacements have been made:\n",
-      "\n",
-      "    Raw,college   ->   Raw_college\n",
-      "    Raw,nocollege   ->   Raw_nocollege\n",
-      "    LTU,college   ->   LTU_college\n",
-      "    LTU,nocollege   ->   LTU_nocollege\n",
-      "    STU,college   ->   STU_college\n",
-      "    STU,nocollege   ->   STU_nocollege\n",
-      "    STU+SpellAdj,college   ->   STU_SpellAdj_college\n",
-      "    STU+SpellAdj,nocollege   ->   STU_SpellAdj_nocollege\n",
-      "    STU+Recalls+SpellAdj,college   ->   STU_Recalls_SpellAdj_college\n",
-      "    STU+Recalls+SpellAdj,nocollege   ->   STU_Recalls_SpellAdj_nocollege\n",
-      "    NE+SpellAdj,college   ->   NE_SpellAdj_college\n",
-      "    NE+SpellAdj,nocollege   ->   NE_SpellAdj_nocollege\n",
-      "\n",
-      "If this is not what you expect, please make sure you have Stata-compliant\n",
-      "column names in your DataFrame (strings only, max 32 characters, only\n",
-      "alphanumerics and underscores, no Stata reserved words)\n",
-      "\n",
-      "  warnings.warn(ws, InvalidColumnName)\n"
-     ]
-    }
-   ],
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "table_raw = np.empty(23)\n",
     "names = []\n",
@@ -344,59 +274,20 @@
     "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
     "f.close()\n",
     "\n",
-    "names_latex = format_names(names)\n",
-    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
-    "AllTab.round(3).to_stata('results/results_educ.dta')"
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, educ_names = format_column_names(column_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['educ'] = list(itertools.chain.from_iterable(educ_names))\n",
+    "short_tab.round(3).to_stata('results/results_educ.dta')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cristina/anaconda2/envs/py36/lib/python3.6/site-packages/pandas/io/stata.py:2400: InvalidColumnName: \n",
-      "Not all pandas column names were valid Stata variable names.\n",
-      "The following replacements have been made:\n",
-      "\n",
-      "    RAW2002-2007College   ->   RAW2002_2007College\n",
-      "    RAW2002-2007NoCollege   ->   RAW2002_2007NoCollege\n",
-      "    LTU2002-2007,college   ->   LTU2002_2007_college\n",
-      "    LTU2002-2007,nocollege   ->   LTU2002_2007_nocollege\n",
-      "    STU2002-2007,college   ->   STU2002_2007_college\n",
-      "    STU2002-2007,nocollege   ->   STU2002_2007_nocollege\n",
-      "    STU+Spellcorrection2002-2007,college   ->   STU_Spellcorrection2002_2007_col\n",
-      "    STU+Spellcorrection2002-2007,nocollege   ->   STU_Spellcorrection2002_2007_noc\n",
-      "    STU+Recalls+SpellAdj2002-2007,college   ->   STU_Recalls_SpellAdj2002_2007_co\n",
-      "    STU+Recalls+SpellAdj2002-2007,nocollege   ->   STU_Recalls_SpellAdj2002_2007_no\n",
-      "    NE+Spellcorrection2002-2007,college   ->   NE_Spellcorrection2002_2007_coll\n",
-      "    NE+Spellcorrection2002-2007,nocollege   ->   NE_Spellcorrection2002_2007_noco\n",
-      "    RAW2008-2013College   ->   RAW2008_2013College\n",
-      "    RAW2008-2013NoCollege   ->   RAW2008_2013NoCollege\n",
-      "    LTU2008-2013,college   ->   LTU2008_2013_college\n",
-      "    LTU2008-2013,nocollege   ->   LTU2008_2013_nocollege\n",
-      "    STU2008-2013,college   ->   STU2008_2013_college\n",
-      "    STU2008-2013,nocollege   ->   STU2008_2013_nocollege\n",
-      "    STU+Spellcorrection2008-2013,college   ->   STU_Spellcorrection2008_2013_col\n",
-      "    STU+Spellcorrection2008-2013,nocollege   ->   STU_Spellcorrection2008_2013_noc\n",
-      "    STU+Recalls+SpellAdj2008-2013,college   ->   STU_Recalls_SpellAdj2008_2013_co\n",
-      "    STU+Recalls+SpellAdj2008-2013,nocollege   ->   STU_Recalls_SpellAdj2008_2013_no\n",
-      "    NE+Spellcorrection2008-2013,college   ->   NE_Spellcorrection2008_2013_coll\n",
-      "    NE+Spellcorrection2008-2013,nocollege   ->   NE_Spellcorrection2008_2013_noco\n",
-      "\n",
-      "If this is not what you expect, please make sure you have Stata-compliant\n",
-      "column names in your DataFrame (strings only, max 32 characters, only\n",
-      "alphanumerics and underscores, no Stata reserved words)\n",
-      "\n",
-      "  warnings.warn(ws, InvalidColumnName)\n"
-     ]
-    }
-   ],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "table_raw = np.empty(23)\n",
     "names = []\n",
@@ -424,9 +315,17 @@
     "#             pd.DataFrame(sigmas, index=names_latex, columns=['Raw'])\n",
     "f.close()\n",
     "\n",
-    "names_latex = format_names(names)\n",
-    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=column_names)\n",
-    "AllTab.round(3).to_stata('results/results_BC_educ.dta')"
+    "# names_latex = format_names(names)\n",
+    "names_latex = names\n",
+    "var_names, educ_names = format_column_names(column_names)\n",
+    "data_names = np.array(educ_names)\n",
+    "AllTab = pd.DataFrame(table_raw[1:,:].T, index=names_latex, columns=var_names)\n",
+    "short_tab = format_very_short(AllTab)\n",
+    "short_tab['educ'] = data_names[:,1]\n",
+    "short_tab['period'] = data_names[:,0]\n",
+    "short_tab.round(3).to_stata('results/results_BC_educ.dta')\n",
+    "# short_tab.round(3).to_csv('results/results_BC_educ.csv')\n",
+    "# short_tab"
    ]
   },
   {
